Fixed some sentences

--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@ title: Projects
                 is a block-elimination puzzle game that requires you to eliminate all the blocks by following these rules: 
                   <ul>
                     <li>There is a clear path between two blocks with same type</li>
-                    <li>This path is only valid when it has within 2 redirections</li>
+                    <li>This path is only valid when it has NO more than 2 redirections</li>
                   </ul>
                  
                 This game was a programming interview assignment and I finished it within 5 days after my day-job.
@@ -41,7 +41,8 @@ title: Projects
             <!-- rpg game demo -->
             <li class="page-list-item">
                 <strong>HTML5 Game Demo</strong> &mdash;
-                is a simple game demo I made for testing my component game object system and practicing javascript. It is inspired by <a href="http://browserquest.mozilla.org">BrowserQuest</a>.
+                is a simple game demo I made for testing my component game object system and practicing javascript. It is inspired by <a href="http://browserquest.mozilla.org">BrowserQuest</a>. 
+                <strong> Something goes wrong under Chrome, it works with Firefox though. It will be fixed hopefully. :-) </strong>
                 <ul class="links">
                     <li><a href="http://www.magkbdev.com/mmojs" target="_blank">Live Demo</a></li>
                     <li><a target="_blank" href="https://github.com/stevegocoding/todo_php">Source Code</a>
