cljat-details post and portfolio page

--- a/_portfolio/cljat/proj-cljat.html
+++ b/_portfolio/cljat/proj-cljat.html
@@ -17,10 +17,45 @@ gallery:
 ---
 
 <p>
-This is the cljat portofolio page
-@TODO: project details
+I've been working on this toy project to learn Clojure lately fianlly
+there is a walking skeleton I can put it out there. 
+</p>
+
+<p>
+Here is the live demo running on an EC2 instance: <a href="http://ec2-52-38-68-204.us-west-2.compute.amazonaws.com:8080">Live Demo</a>
 </p>
 
 <p>
 {% include gallery %}
+</p>
+
+<p>
+Features:
+</p>
+<ul class="org-ul">
+<li>Realtime messaging with Websocket
+</li>
+<li>Scalable with Redis' PUB/SUB across web server nodes
+</li>
+<li>React Clojurescript front-end application with Reagent
+</li>
+</ul>
+
+<p>
+Nice to have in the future:
+</p>
+<ul class="org-ul">
+<li>More powerful messaging protocols
+</li>
+<li>User profiles features
+</li>
+<li>Messages history searching support with ElasticSearch or Solr
+</li>
+<li>API and Native mobile client
+</li>
+</ul>
+
+<p>
+I'll be sharing some things I've leant while working on this project
+in this <a href="http:/dev/portfolio/cljat-details/">Post</a>
 </p>
