--- a/_posts/2016-05-01-cljat-details.html
+++ b/_posts/2016-05-01-cljat-details.html
@@ -19,7 +19,7 @@ tags:
 <p>
 After spending weeks of my spare time fiddling with Clojure, I
 finally put together a simple websocket chat web application -
-<a href="/portfolio/cljat"> Cljat </a>.
+<a href="http:/portfolio/cljat">Cljat</a>
 </p>
 
 <div id="outline-container-sec-1" class="outline-2">
