--- a/_portfolio/cljat/proj-cljat.html
+++ b/_portfolio/cljat/proj-cljat.html
@@ -26,6 +26,11 @@ Here is the live demo running on an EC2 instance: <a href="http://ec2-52-38-68-2
 </p>
 
 <p>
+Here are some development details and things l've learned in this
+<a href="http:/dev/portfolio/cljat-details/">Post</a>.
+</p>
+
+<p>
 {% include gallery %}
 </p>
 
@@ -54,8 +59,3 @@ Nice to have in the future:
 <li>API and Native mobile client
 </li>
 </ul>
-
-<p>
-I'll be sharing some things I've leant while working on this project
-in this <a href="http:/dev/portfolio/cljat-details/">Post</a>
-</p>
