--- a/_portfolio/llkjs/proj-llkjs.html
+++ b/_portfolio/llkjs/proj-llkjs.html
@@ -28,7 +28,7 @@ a 2D canvas rendering library called <a href="http://www.createjs.com/easeljs">E
 </p>
 
 <p>
-Here is the <a href="http://www.magkbdev.com/llkjs">Live Demo</a>
+Here is the <a href="http://www.magkbdev.com/llkjs">Live Demo</a> and the <a href="https://github.com/stevegocoding/llkjs">GitHub Repo</a>
 </p>
 
 <p>
