--- a/_portfolio/llkjs/proj-llkjs.html
+++ b/_portfolio/llkjs/proj-llkjs.html
@@ -1,9 +1,9 @@
 ---
 permalink: /portfolio/llkjs/
-title: "Connect & Eliminate Game"
+title: "A Tile-Matching Game"
 layout: single
 author_profile: false
-Excerpt: "A simple connect & eliminate puzzle written in Javascript"
+excerpt: "A simple tile-matching puzzle written in Javascript"
 header:
   teaser: "llkjs_portfolio.png"
 
