--- a/_portfolio/hbao/proj-hbao.html
+++ b/_portfolio/hbao/proj-hbao.html
@@ -20,5 +20,13 @@ gallery:
 ---
 
 <p>
+More details will be updated soon.
+</p>
+
+<p>
+Here is the <a href="https://github.com/stevegocoding/dx11_sdk">GitHub Repo</a>.
+</p>
+
+<p>
 {% include gallery %}
 </p>
