--- a/_portfolio/yart/proj-yart.html
+++ b/_portfolio/yart/proj-yart.html
@@ -11,10 +11,18 @@ gallery:
   - url: yart_room2.jpg
     image_path: yart_room2.jpg
     alt: "Room 2"
-  - url: yart_building.jpq
+  - url: yart_building.jpg
     image_path: yart_building.jpg
     alt: "Building"
 ---
+
+<p>
+More details will be updated soon.
+</p>
+
+<p>
+Here is the <a href="https://github.com/stevegocoding/yart">GitHub Repo</a>
+</p>
 
 <p>
 {% include gallery %}
