--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ author_profile: false
 
 {% include base_path %}
 
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
 <h3 class="archive__subtitle">Recent Posts</h3>
 
 {% for post in paginator.posts %}
